--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CloneAppCarrot</string>
+
+    <string name="used">중고거래</string>
+    <string name="promote">동네홍보</string>
 </resources>
