--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CloneAppCarrot</string>
+    <string name="app_name">당근마켓</string>
 
     <string name="used">중고거래</string>
     <string name="promote">동네홍보</string>
